add update routes api
